Bug 150688 - When using a small screen and pressing 2 arrows for more buttons: CRITICAL message (gtk only)
Summary: When using a small screen and pressing 2 arrows for more buttons: CRITICAL me...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0 target:7.4.2
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2022-08-30 16:01 UTC by BogdanB
Modified: 2022-09-07 06:19 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (157.56 KB, image/png)
2022-08-30 16:03 UTC, BogdanB
Details
bt with debug symbols (11.97 KB, text/x-log)
2022-08-30 20:23 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description BogdanB 2022-08-30 16:01:32 UTC
Description:
I opened a new LibreOffice Writer document onnhalf of the screen. So, not all the toolbars are visible on the screen. In order to see more there are some arrows on the right of the LibreOffice window. When they are pressed I get this message when using a LibreOffice dbg version

(soffice:14677): GLib-GObject-CRITICAL **: 18:57:36.641: g_object_get_qdata: assertion 'G_IS_OBJECT (object)' failed

(soffice:14677): GLib-GObject-CRITICAL **: 18:57:43.186: g_object_get_qdata: assertion 'G_IS_OBJECT (object)' failed



Steps to Reproduce:
1. See description and screenshot


Actual Results:
CRITICAL message

Expected Results:
No critical message


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 4c96abd81460977d413d4d28e891bbbac5769ede
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 1 BogdanB 2022-08-30 16:03:05 UTC
Created attachment 182101 [details]
screenshot
Comment 2 Telesto 2022-08-30 19:39:17 UTC
@Julien
Would you mind to verify?
Comment 3 Julien Nabet 2022-08-30 20:20:48 UTC
On pc Debian x86-64 with master sources updated today, I can reproduce this.
Comment 4 Julien Nabet 2022-08-30 20:23:14 UTC
Created attachment 182106 [details]
bt with debug symbols

I used:
export G_DEBUG=fatal_warnings
but then I couldn't attach gdb to the soffice process because all was stuck when reproducing the pb.
Then I tried to use --backtrace when launching soffice but it stopped because of Java part which is still broken after all these years but that's another story.

So I gave a try with Calc and could retrieved a bt since it doesn't use Java at its launching.
Comment 5 Julien Nabet 2022-08-30 20:24:09 UTC
Caolán: thought you might be interested in this one since it's gtk related.
Comment 6 Commit Notification 2022-09-01 13:02:53 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/418beb68f00190f61effb69726343adcd4597f64

tdf#150688 return atk_noop_object_wrapper_new() instead of null on failure

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Julien Nabet 2022-09-01 16:03:21 UTC
With master sources updated today (including the Caolán's patch), I confirm I don't reproduce this anymore.

As always, thank you Caolán! :-)
Comment 8 Commit Notification 2022-09-07 06:19:46 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/efaf44a8d4dc41086ae24b847a86c7b0b66106d3

tdf#150688 return atk_noop_object_wrapper_new() instead of null on failure

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.