tdf#150688 return atk_noop_object_wrapper_new() instead of null on failure

Change-Id: I20fd190a36649193ee2a1e536f520344c5f6c89a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139160
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>