vcl/unx/gtk3/a11y/atkfactory.cxx
@@ -117,7 +117,7 @@ wrapper_factory_create_accessible( GObject *obj )
         return atk_noop_object_wrapper_new();
 
     GtkSalFrame* pFrame = GtkSalFrame::getFromWindow(pTopLevel);
-    g_return_val_if_fail( pFrame != nullptr, nullptr );
+    g_return_val_if_fail(pFrame != nullptr, atk_noop_object_wrapper_new());
 
     vcl::Window* pFrameWindow = pFrame->GetWindow();
     if( pFrameWindow )
@@ -145,7 +145,7 @@ wrapper_factory_create_accessible( GObject *obj )
         }
     }
 
-    return nullptr;
+    return atk_noop_object_wrapper_new();
 }
 
 AtkObject* ooo_fixed_get_accessible(GtkWidget *obj)
